tests/fixtures/invalid/type_errors/non_boolean_condition.luma
-- Non-boolean condition in if statement
if 42 do
    let x = 1
end
